Update travis CI
Update travis CI file

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.6"
   - "3.7"
 cache: pip
+before_install:
+  - sudo apt-get -y install lib libsystemd-dev libdbus-glib-1-dev libdbus-1-dev
 install:
   - pip install -r requirements.txt
 script:
